--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "18.16.16",
     "cross-env": "7.0.3",
     "nodemon": "^3.1.3",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "graphql": "^16.8.1",
-    "graphql-yoga": "^5.3.1"
+    "graphql-yoga": "^5.3.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
