--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fluentui/react-components": "^9.54.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.0",
+    "urql": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
