--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,8 +18,10 @@
     "urql": "^4.1.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.3.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
